<resources>
    <string name="app_name">Pet Care</string>
    <string name="title_activity_your_account">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="edit">EDIT</string>
    <string name="title_activity_email_update">emailUpdate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rollover1">"Put your dog in a "down" position. Then, put a treat in your hand and move your hand slowly behind your dog's neck. Your goal is to get your dog to turn its head backwards without standing up."</string>

    <string name="rollover2">"Then, as its head reaches back to sniff the treat, gently roll it over. As soon as your dog rolls over, give it the treat and praise your dog enthusiastically. Repeat the process and as you start to roll it over, say the command "roll" and when it goes completely over, treat it and give praise again. Do this for five to 10 minutes.</string>
    <string name="rollover3">"Try again later in the day for another five to 10-minute session. Eventually, your pet should understand that the command and the rolling process are directly linked. After your pet rolls over when asked, you no longer need to offer a treat each time.  Always praise your dog when it performs correctly, and don't get frustrated if it doesn't seem to be catching on right away. Stop the session if you can't stay calm and relaxed."</string>
    <string name="shake1">"Teaching a dog to shake hands is generally pretty easy because some dogs naturally raise their paw when asking for a treat. Start by putting your dog in a "sit" position. Then, put a treat in your hand and slowly move it towards the ground near the dog's paw"</string>
    <string name="shake2">"As the dog raises its paw in anticipation, use the verbal cue "shake," give it the treat, then praise your dog enthusiastically. As you practice this, hold your hand gradually higher so the dog must raise its paw higher to gain the treat. Your goal is to have the dog raise its paw to chest height."</string>
    <string name="shake3">"Keep practising and always use the same paw for training. Eventually, once the dog holds its paw up on command, you can switch to the other paw. The key here is to use another command such as "other" so the dog learns that one command works for its right paw and the other for its left. Once your dog is shaking hands on command, you can start to eliminate the treats and offer happy praise instead."</string>
    <string name="h51">"As your dog masters the "shake" command, it's a simple matter to teach him to do a "high five." Start by working on the "shake" command, but begin to hold your palm out and as the dog hits your palm, give the command "high five." Treat and praise your dog immediately. Your goal here is to get the dog to raise its paw as high as possible and to touch your open palm."</string>
    <string name="speak1">"Encouraging your dog to bark on command is easy if your pet is naturally vocal, but it can take a bit longer to train if your dog is on the quiet side. Start by getting your dog excited by tossing a ball or talking in an excited tone. Then, put your dog in a "sit" position and wave a treat by your dog's nose. Keep waving the treat without letting your dog see it until your dog whines or cries. As soon as your dog makes a sound, reward your dog with the treat."</string>
    <string name="speak2">"Repeat the process, but use the command "speak" as your dog begins to make noise. Do not reward your dog until it makes noise. And, always tell your dog "hush" or "enough" and walk away when you want your dog to stop."</string>
    <string name="speak3">"Note: If your dog has a tendency to bark excessively, use this trick only when your dog is in a sitting position. Barking at everything that walks by your front window should not be encouraged and should never be rewarded with treats or praise."</string>
    <string name="dance">"Although almost any dog can be taught to dance, the smaller breeds are typically easier to train. Getting a Saint Bernard up on its hind legs can be challenging, but lively dogs under 40 pounds can quickly learn to cut a rug. Start with your dog in a sitting position and hold a treat in your closed hand near its nose. Slowly lift your hand over and slightly behind the dog's head so the dog looks back and begins to stand on its hind legs. As soon as your dog stands on its hind legs, praise the dog and give it the treat. Repeat the process until your dog stands quickly and sturdily on its back legs."</string>
    <string name="dance1">"Then, begin moving the treat above the dog's head in a small circle. You want your dog to twirl on its hind legs. As soon as the dog begins to step in a circle, use the term "dance" and offer praise and the treat. Use the treat as bait to get the dog to stand up and turn in a circle. Again, this trick is easier to accomplish with small, agile dogs. Avoid this trick if you have a breed prone to back trouble such as a dachshund."</string>
    <string name="bork">"To keep your dog from barking when welcoming visitors, redirect them to a “sit-stay” or a "down-stay" position before answering the door. Provide the visitor with plenty of treats to give to your dog once they are quiet and sitting. This associates welcoming a visitor with polite behavior as well as yummy treats!"</string>
    <string name="jump">Cue your dog to sit before greeting someone. Have treats on hand and reward them when your pet remains seated. Guests should ignore your dog until they have all four paws on the ground or are sitting. If your dog jumps up, guests should turn their backs and leave.</string>
    <string name="lick">If your dog starts licking more than usual, get up and walk away or redirect to something else. Giving them a toy or treat when they stop licking you works wonders!</string>
    <string name="furniture">"There’s nothing wrong with snuggling with your pet on the sofa but it’s vital that all family members reinforce the same boundaries. Decide early on what the limits are and stick with them for consistent training.</string>
    <string name="doors">"A dog bolting through the door is a dangerous habit to keep. Always put your dog’s leash on before you go to the door. Train your pup to sit and stay while you open the door and invite them to go through when you both are ready to do so. It is also good practice to establish a “wait” as soon as they have walked through the door, where your dog pauses to look for next actions provided by you."</string>
    <string name="chew">"Provide plenty of safe and chew-approved chew toys for your puppy or dog. While chewing is normal you can redirect the behavior (and save your favorite shoes) by putting your items away and having approved chew toys readily available. Be sure to reward your pet for finding a positive solution! Another tip is to schedule thirty minutes of exercise per day. This gives your pet a good physical outlet and by adding a puzzle toy session each day, they will also get the mental stimulation they need."</string>
    <string name="mememe">"If your dog is displaying “attention seeking” behaviors, ignore them. Turn your back and don’t acknowledge your pet until they offer a different behavior."</string>
    <string name="dig">"Dogs love getting their paws in the dirt to bury food or create a cool place to lie in the summer. If this is a problem, set aside a small “digging allowed” area and encourage them to dig there. For pet parents with limited yard space, supervise your dog's outings and distract them with toys and activities to discourage digging. Taking your dog for a thirty-minute walk also helps burn off the energy they use when digging."</string>
    <string name="agression">"Aggression is not common in most dogs and aggressive behaviors often have an underlying cause. If your dog lunges, snaps or bites another dog or person, seek help from a veterinary behaviorist. Only veterinarian-board certified trainers should address aggression issues."</string>
    <string name="fear">"A well-bred, properly socialized and trained dog is less likely to be fearful in most situations. Even so, any dog can become afraid when in new or strange circumstances. Consult a veterinary behaviorist for scared dogs who refuse treats or default to aggressive behaviors."</string>
    <string name="oth_dogs">"Dogs should never meet on a leash since they hinder your dog’s body language and cause confusion between both dogs. Instead, if you have a puppy, find a supervised puppy playtime session to attend. Or, take your dog to a dog park where they can be off leash and meet other polite dogs. If you run into someone on the sidewalk, you should both ask your dogs to sit before introducing yourself to the stranger. Reward your dog for sitting during the introduction."</string>
    <string name="stealing">"Remove anything and everything from the countertop and your dog will figure out there is nothing worth “counter surfing.” This method always works! Or, crate your dog when unable to supervise them."</string>


</resources>