<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="#F3E2E2"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="5 TRICKS TO TEACH YOUR DOG"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="397dp"
            android:layout_height="201dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/dog_tricks1" />

        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="1. Roll Over"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/rollover1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/rollover2"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/rollover3"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="621dp"
            android:layout_height="285dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/dogtrick2" />

        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="2. Shake Hand"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/shake1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/shake2"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/shake3"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="621dp"
            android:layout_height="285dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/trick3" />

        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="3. High Five"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/h51" />


        <ImageView
            android:layout_width="621dp"
            android:layout_height="285dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/trick4" />

        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="4. Speak"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/speak1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/speak2"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/speak3"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="621dp"
            android:layout_height="285dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/trick5" />
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="5. Dance"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/dance" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/dance1"
            android:layout_marginTop="20dp"/>


        <ImageView
            android:layout_width="621dp"
            android:layout_height="285dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/trick6" />
        <android.widget.Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/outline_bt"
            android:text="BACK"
            android:textColor="@color/white"
            android:fontFamily="@font/autour_one"
            android:layout_gravity="center"
            android:id="@+id/backDogsTricks"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>