<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="#F3E2E2"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="12 HABITS OF YOUR DOG TO CHANGE"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="397dp"
            android:layout_height="201dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/habits1" />

        <TextView
            android:layout_marginTop="50dp"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="1. Barking at visitors"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/bork"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="2. Jumping on guests"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/jump"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="3. Sitting on furniture"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/furniture"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="4. Attention seeking"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/mememe"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="5. Excessive licking"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/lick"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="6. Digging"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/dig"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="7. Stealing"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/stealing"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="8. Pushing through the doors"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/doors"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="9. Chewing"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/chew"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="10. Aggression"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/agression"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="11. Fear"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/fear"/>
        <TextView
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="12. Meeting other dogs"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cousine"
            android:text="@string/oth_dogs"/>















        <android.widget.Button
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/outline_bt"
            android:text="BACK"
            android:textColor="@color/white"
            android:fontFamily="@font/autour_one"
            android:layout_gravity="center"
            android:id="@+id/backDogsBehaviour"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>